src/test/deca/context/invalid/expr_cast_float_to_null.deca
// Test of the rule (3.39) : can't cast float to null.
{
	null var1;
	float var2;
	var1 = (null)(var2);
}

// Résultat :
//# a
